frontal/base/productpage-dep.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: productpage
  namespace: bookstore-kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
  template:
    metadata:
      labels:
        app: productpage
    spec:
      hostNetwork: false
      containers:
      - name: productpage
        image: docker.io/jxadro/aiops_liberty_app:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - protocol: TCP
          containerPort: 9080
          name: http
