frontal/base/productpage-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: productpage
  name: productpage
  namespace: bookstore-kustomize
spec:
  host: productpagehost
  port:
    targetPort: 9080
  to:
    kind: Service
    name: productpage
    weight: 100
  wildcardPolicy: None
